# toko-sederhana-c

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: main.c
